scss/_08-comments.scss
/* 9.0 Comments */
.comments-area > * + * {
  margin-top: 3em;
}

.comments-title {
  border-bottom: var(--border-width) var(--border-style) var(--color-scheme);
}

.comment-list,
.comment-list .children {
  list-style: none;
}

.comment-list {
  margin-left: 0;
 
  > * + * {
    margin-top: 2em;
  }
}

.comment-content,
.reply {
  margin: 0 !important;
}

.comment,
.pingback {
  .children {
    margin: 2em 0 0 1em;
  }
}

.comment + .comment {
  border-top: var(--border-width) dashed var(--color-gray);
  padding-block-start: 2em;
}

.comment-meta {
  white-space: nowrap;
  font-size: 1rem;
  display: inline-grid;
  grid-template-columns: 42px minmax(0, auto);
  gap: 1em;

  a {
    text-decoration: none;
    color: var(--text-color);

    &:hover {
      text-decoration: underline;
    }
  }

  .comment-author {
    display: inline-grid;
    grid-template-columns: 42px minmax(0, auto);
    grid-column: 1 / 3;
    grid-row: 1 / 3;
    gap: 1em;

    .avatar {
      grid-column: 1;
      grid-row: 1 / 2;
      border-radius: 50%;
    }

    .fn {
      grid-column: 2;
      grid-row: 1;
    }

    .says {
      grid-column: 3;
      grid-row: 1;
    }
  }

  .comment-metadata {
    grid-row: 2;
    grid-column: 2;
    font-size: .8rem;
  }

  .comment-edit-link {
    display: inline-block;
    text-transform: uppercase;
    font-weight: 700;
    color: var(--color-gray-900);
    margin-inline-start: 1em;
  
    &:hover {
      text-decoration: underline;
    }
  }
}

.comment-content,
.comment .reply {
  padding-inline-start: calc(42px + 1em);
}

.comment-reply-link {
  border: var(--border-width) var(--border-style) var(--color-scheme);
  border-radius: var(--border-radius);
  text-decoration: none;
  padding: 0.25em 0.5em;
  transition: .3s ease-in-out;
  margin: 0 !important;
  font-size: 0.8rem;
  color: var(--text-color);

  &:hover {
    background-color: var(--color-scheme);
  }
}

@media (prefers-reduced-motion) {
  .comment-reply-link {
    transition: none;
  }
}

@media (min-width: 48em) {
 .comment .children {
    margin: 2em 0 0 2em;
  }
}

.comment-form {
  label {
    display: block;
  }

  [type="submit"] {
    background-color: var(--color-scheme);
  }
}

.comment-reply-title {
  font-weight: var(--font-weight--bold);
}

